--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   grpc: ^2.2.0
+  protobuf: ^1.0.1
+  provider: ^4.1.3
+  flutter_staggered_grid_view: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
